--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "@types/node": "^16.11.66",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "bootstrap": "^5.2.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-awesome-modal": "^2.0.5",
+    "react-bootstrap": "^2.5.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.6",
+    "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +49,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "@types/webpack-env": "^1.18.0",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
